--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@vitejs/plugin-react": "^4.3.4",
     "cra-template": "1.2.0",
     "emailjs-com": "^3.2.0",
     "nodemailer": "^6.10.0",
@@ -10,15 +11,14 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
-    "react-scripts": "5.0.1",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "vite": "^6.2.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview"
+},
   "eslintConfig": {
     "extends": [
       "react-app",
